Fixed text wrap issue on responsive tables

--- a/src/_core/scss/base/reboot/_reboot.scss
+++ b/src/_core/scss/base/reboot/_reboot.scss
@@ -246,7 +246,6 @@ table {
 	margin-bottom: 20px;
 	border-collapse: collapse;
 	border-spacing: 0;
-	white-space: nowrap;
 	vertical-align: top;
 	display: block; // used to force responsive
 	overflow-x: auto; // used to force responsive
@@ -277,6 +276,10 @@ table {
 table tr {
 	border-top: 1px solid $grey;
 	background-color: white;
+
+	td {
+		min-width: 150px;
+	}
 }
 
 table tr:nth-child(2n) {
